// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spin if indicator set null should not be render default indicator 1`] = `
<Spin
  indicator={null}
  size="default"
  spinning={true}
  wrapperClassName=""
>
  <div
    className="ezd-spin ezd-spin-spinning"
  />
</Spin>
`;

exports[`Spin rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ezd-spin ezd-spin-spinning ezd-spin-rtl"
>
  <span
    class="ezd-spin-dot ezd-spin-dot-spin"
  >
    <i
      class="ezd-spin-dot-item"
    />
    <i
      class="ezd-spin-dot-item"
    />
    <i
      class="ezd-spin-dot-item"
    />
    <i
      class="ezd-spin-dot-item"
    />
  </span>
</div>
`;

exports[`Spin should render custom indicator when it's set 1`] = `
<div
  class="ezd-spin ezd-spin-spinning"
>
  <div
    class="custom-indicator ezd-spin-dot"
  />
</div>
`;

exports[`Spin should support static method Spin.setDefaultIndicator 1`] = `
<Spin
  size="default"
  spinning={true}
  wrapperClassName=""
>
  <div
    className="ezd-spin ezd-spin-spinning"
  >
    <em
      className="custom-spinner ezd-spin-dot"
    />
  </div>
</Spin>
`;
